chore: add style dir for separate of concern pattern

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "paths": {
       "@/*": ["./*"],
       "@components/*": ["./src/components/*"],
+      "@style/*": ["./src/style/*"],
       "@movie/*": ["./src/components/movie/*"]
     }
   },
